--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <meta name="robots" content="all"/>
     <meta name="description" content="Зацепы поездов в Беларуси архив.">
     <title>Зацепы поездов в Беларуси архив</title>
